# rustfm

./: Cargo.toml  README.md
src/: app.rs  explorer.rs  main.rs  search.rs  terminal.rs
