[package]
name = "file_explorer_with_terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
# Core GUI - egui 0.33.3 as per spec
egui = { version = "0.33.3", features = ["serde"] }
eframe = { version = "0.33.3", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }

# Terminal emulation
portable-pty = "0.9"
termwiz = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system operations
dirs = "5"
dunce = "1"
walkdir = "2"

# Utilities
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
